// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Change signer flow snapshots it renders preface correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  max-width: 560px;
  width: 100%;
  min-width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 560px;
  min-height: 300px;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  padding: 16px;
  background-color: #FF9E80;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  background-color: #FF9E80;
  color: #661800;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 24px;
  padding-bottom: 24px;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 16px;
  box-shadow: rgba(0,0,0,0.10) 0px 0.7px 2.2px -8px,rgba(0,0,0,0.04) 0px 1.7px 2.4px,rgba(0,0,0,0.106) 0px 3.1px 8.1px,rgba(0,0,0,0.04) 0px 5.6px 12.1px,rgba(0,0,0,0.045) 0px 4.4px 4.8px,rgba(0,0,0,0.05) 0px 15px 41px;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
  margin: auto;
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 560px;
  width: 100%;
  min-width: 300px;
  max-height: 480px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c11 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c18 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c18:hover {
  opacity: 0.8;
}

.c19 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c19:hover {
  opacity: 0.8;
}

.c12 {
  color: #661800;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c14 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-top: 0;
}

.c2 {
  width: 24;
  height: 24;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.25rem;
}

.c15:hover {
  border-bottom: 2px solid #5E26FF;
}

.c1 {
  outline: 0;
  border: 0;
  background: transparent;
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
  cursor: pointer;
  display: inline-block;
  margin-left: auto;
  justify-self: flex-end;
}

.c1:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

<div>
  <div
    class="c0"
    display="flex"
    width="100%"
  >
    <button
      class="c1"
      display="inline-block"
      role="button"
      type="button"
    >
      <svg
        class="c2"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M19.7333 4.2669C19.3776 3.91103 18.801 3.91103 18.4453 4.2669L11.9994 10.7166L5.55552 4.26885C5.19986 3.91299 4.62323 3.91299 4.26757 4.26885C3.91191 4.62472 3.91191 5.20169 4.26757 5.55756L10.7115 12.0053L4.27793 18.4426C3.92228 18.7985 3.92228 19.3755 4.27793 19.7313C4.63359 20.0872 5.21022 20.0872 5.56587 19.7313L11.9994 13.294L18.435 19.7333C18.7906 20.0892 19.3672 20.0892 19.7229 19.7333C20.0786 19.3774 20.0786 18.8005 19.7229 18.4446L13.2874 12.0053L19.7333 5.5556C20.0889 5.19974 20.0889 4.62276 19.7333 4.2669Z"
          fill="#5E26FF"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <form
      class="c3"
    >
      <div
        class="c4"
        display="flex"
        width="100%"
      >
        <div
          class="c5"
        >
          
          <div
            class="c6"
            display="flex"
            width="100%"
          >
            <div
              class="c7"
              display="flex"
              width="100%"
            >
              <div
                class="c8"
                display="flex"
                overflow="hidden"
                width="100%"
              >
                <div
                  class="c9"
                  display="flex"
                >
                  <div
                    class="c10"
                    color="status.warning.foreground"
                    display="flex"
                    size="6"
                  >
                    <h3
                      class="c11"
                    >
                      Wn
                    </h3>
                  </div>
                  <h2
                    class="c12"
                    color="status.warning.foreground"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Warning
                  </h2>
                </div>
                <div
                  class="c13"
                >
                  <p
                    class="c14"
                    font-family="RT-Alias-Grotesk"
                    font-size="2"
                    font-weight="400"
                  >
                    You're changing a signer of your multisig account to a new Filecoin address.
                  </p>
                  <p
                    class="c14"
                    font-family="RT-Alias-Grotesk"
                    font-size="2"
                    font-weight="400"
                  >
                    Make sure you or someone you trust owns the private key to this new Filecoin address.
                  </p>
                  <p
                    class="c14"
                    font-family="RT-Alias-Grotesk"
                    font-size="2"
                    font-weight="400"
                  >
                    If you or anyone else does not own this address, you could lose access to your funds permanently. There is no way to resolve this.
                  </p>
                  <a
                    class="c15"
                    color="core.primary"
                    font-size="3"
                    href="https://coinsutra.com/security-risks-bitcoin-wallets/"
                    rel="noopener"
                    target="_blank"
                  >
                    Why isn't it secure?
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c16"
          />
        </div>
        <div
          class="c17"
          display="flex"
          width="100%"
        >
          <button
            class="c18"
            font-size="3"
            height="6"
            type="button"
          >
            Back
          </button>
          <button
            class="c19"
            font-size="3"
            height="6"
            type="submit"
          >
            Next
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Change signer flow snapshots it renders step 2 correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  max-width: 560px;
  width: 100%;
  min-width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 16px;
  box-shadow: rgba(0,0,0,0.10) 0px 0.7px 2.2px -8px,rgba(0,0,0,0.04) 0px 1.7px 2.4px,rgba(0,0,0,0.106) 0px 3.1px 8.1px,rgba(0,0,0,0.04) 0px 5.6px 12.1px,rgba(0,0,0,0.045) 0px 4.4px 4.8px,rgba(0,0,0,0.05) 0px 15px 41px;
}

.c44 {
  min-width: 0;
  box-sizing: border-box;
  margin: auto;
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 560px;
  width: 100%;
  min-width: 300px;
  max-height: 480px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: #d9e0f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: auto;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c27 {
  min-width: 0;
  box-sizing: border-box;
  border: 0;
  padding: 16px;
  background-color: #EFF3FD;
  width: 100%;
}

.c28 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 16px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c30 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c32 {
  min-width: 0;
  box-sizing: border-box;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 8px;
}

.c45 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c45:hover {
  opacity: 0.8;
}

.c46 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c46:hover {
  opacity: 0.8;
}

.c34 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px;
  border-radius: 4px;
}

.c34:hover {
  opacity: 0.8;
}

.c29 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  padding-left: 0;
}

.c2 {
  width: 24;
  height: 24;
}

.c35 {
  height: auto;
  opacity: 1 !important;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c37 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c33:hover .c36 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
}

.c31:hover {
  border-bottom: 2px solid #5E26FF;
}

.c1 {
  outline: 0;
  border: 0;
  background: transparent;
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
  cursor: pointer;
  display: inline-block;
  margin-left: auto;
  justify-self: flex-end;
}

.c1:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  margin-left: 24px;
  margin-top: 0;
  margin-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #1AD08F;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #C4C4C4;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  border: 0;
  border-top-right-radius: 8px;
  border-top-left-radius: 8px;
  padding: 16px;
  background-color: #5E26FF;
  color: #ffffff;
  width: 100%;
}

.c21 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c22 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c23 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c25 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c26 {
  min-width: 0;
  box-sizing: border-box;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c40 {
  min-width: 0;
  box-sizing: border-box;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 48px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c42 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c14 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-right: 8px;
  margin-top: 0;
  margin-bottom: 0;
}

.c18 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: center;
}

.c24 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c41 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c11 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c43 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  padding-left: 16px;
  padding-right: 16px;
  display: inline-block;
  height: 48px;
  width: 100%;
  border-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c43:hover {
  background: #bacbf7;
  cursor: text;
}

.c43:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c39 {
  display: inline-block;
  width: 100%;
  border-radius: 1px;
}

.c7 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div>
  <div
    class="c0"
    display="flex"
    width="100%"
  >
    <button
      class="c1"
      display="inline-block"
      role="button"
      type="button"
    >
      <svg
        class="c2"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M19.7333 4.2669C19.3776 3.91103 18.801 3.91103 18.4453 4.2669L11.9994 10.7166L5.55552 4.26885C5.19986 3.91299 4.62323 3.91299 4.26757 4.26885C3.91191 4.62472 3.91191 5.20169 4.26757 5.55756L10.7115 12.0053L4.27793 18.4426C3.92228 18.7985 3.92228 19.3755 4.27793 19.7313C4.63359 20.0872 5.21022 20.0872 5.56587 19.7313L11.9994 13.294L18.435 19.7333C18.7906 20.0892 19.3672 20.0892 19.7229 19.7333C20.0786 19.3774 20.0786 18.8005 19.7229 18.4446L13.2874 12.0053L19.7333 5.5556C20.0889 5.19974 20.0889 4.62276 19.7333 4.2669Z"
          fill="#5E26FF"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <form
      class="c3"
    >
      <div
        class="c4"
        display="flex"
        width="100%"
      >
        <div
          class="c5"
        >
          
          <div
            class="c6"
            display="flex"
            overflow="hidden"
            width="auto"
          >
            <ul
              class="c7"
              display="flex"
              width="100%"
            >
              <div
                class="c8"
                display="flex"
              >
                <li
                  class="c9"
                  display="flex"
                >
                  <div
                    class="c10"
                    color="#000"
                    display="flex"
                    size="6"
                  >
                    <h3
                      class="c11"
                    >
                      Ch
                    </h3>
                  </div>
                </li>
                <li
                  class=""
                >
                  <h2
                    class="c12"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Change Ownership
                  </h2>
                </li>
              </div>
              <li
                class=""
              >
                <div
                  class="c13"
                  display="flex"
                >
                  <p
                    class="c14"
                    color="core.nearblack"
                    font-family="RT-Alias-Grotesk"
                    font-size="2"
                    font-weight="400"
                  >
                    Step 
                    2
                  </p>
                  <div
                    class="c15"
                    display="flex"
                  >
                    <div
                      class="c16"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                  <div
                    class="c15"
                    display="flex"
                  >
                    <div
                      class="c16"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                  <div
                    class="c15"
                    display="flex"
                  >
                    <div
                      class="c17"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                  <div
                    class="c15"
                    display="flex"
                  >
                    <div
                      class="c17"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                </div>
              </li>
            </ul>
            <p
              class="c18"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Your Ledger Address pays the transaction fee.
            </p>
            <p
              class="c18"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Please input the new Filecoin address you want to be the signer of your multisig wallet.
            </p>
          </div>
          <div
            class="c19"
          >
            <div
              class="c20"
              color="core.white"
              width="100%"
            >
              <div
                class="c21"
                display="flex"
              >
                <div
                  class="c8"
                  display="flex"
                >
                  <div
                    class="c22"
                    color="white"
                    display="flex"
                    size="6"
                  >
                    <h3
                      class="c11"
                    >
                      Ms
                    </h3>
                  </div>
                  <div
                    class="c23"
                    display="flex"
                  >
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      From
                    </p>
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      f2m4f2 ... sha5za
                    </p>
                  </div>
                </div>
                <div
                  class="c25"
                  display="flex"
                >
                  <div
                    class="c26"
                    display="flex"
                  >
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      Ledger Balance
                    </p>
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      1
                       FIL
                    </p>
                  </div>
                  <div
                    class="c23"
                    display="flex"
                  >
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      Msig Balance
                    </p>
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      1
                       FIL
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c27"
              width="100%"
            >
              <div
                class="c28"
                display="flex"
              >
                <h4
                  class="c29"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Old signer
                </h4>
                <div
                  class="c30"
                  display="flex"
                >
                  <a
                    class="c31"
                    color="core.primary"
                    font-size="2"
                    href="https://filfox.info/en/address/f1nq5k2mps5umtebdovlyo7y6a3ywc7u4tobtuo3a"
                    target="_blank"
                  >
                    f1nq5k ... btuo3a
                  </a>
                  <div
                    class="c32"
                    color="core.secondary"
                    display="flex"
                  >
                    <button
                      class="c33 c34 c35"
                      display="flex"
                      font-size="3"
                      height="6"
                      role="button"
                      type="button"
                    >
                      <svg
                        class="c2 c36 c37"
                        fill="none"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="#1A0066"
                          height="12"
                          width="12"
                          x="8"
                          y="4"
                        />
                        <rect
                          fill="#E0D7FE"
                          height="12"
                          width="12"
                          x="4"
                          y="8"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="c38"
              >
                <div
                  class="c39"
                >
                  <div
                    class="c15"
                    display="flex"
                  >
                    <div
                      class="c40"
                      display="flex"
                    >
                      <h4
                        class="c41"
                        color="core.nearblack"
                        font-family="RT-Alias-Grotesk"
                        font-size="2"
                        font-weight="400"
                      >
                        New signer
                      </h4>
                    </div>
                    <div
                      class="c42"
                      display="flex"
                    >
                      <input
                        class="c43"
                        display="inline-block"
                        height="6"
                        name=""
                        placeholder="f1..."
                        value=""
                        width="100%"
                      />
                      
                    </div>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="c44"
          display="flex"
          width="100%"
        >
          <button
            class="c45"
            font-size="3"
            height="6"
            type="button"
          >
            Back
          </button>
          <button
            class="c46"
            font-size="3"
            height="6"
            type="submit"
          >
            Next
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Change signer flow snapshots it renders step 3 correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  max-width: 560px;
  width: 100%;
  min-width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 16px;
  box-shadow: rgba(0,0,0,0.10) 0px 0.7px 2.2px -8px,rgba(0,0,0,0.04) 0px 1.7px 2.4px,rgba(0,0,0,0.106) 0px 3.1px 8.1px,rgba(0,0,0,0.04) 0px 5.6px 12.1px,rgba(0,0,0,0.045) 0px 4.4px 4.8px,rgba(0,0,0,0.05) 0px 15px 41px;
}

.c58 {
  min-width: 0;
  box-sizing: border-box;
  margin: auto;
  margin-top: 16px;
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 560px;
  width: 100%;
  min-width: 300px;
  max-height: 480px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: #d9e0f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: auto;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c27 {
  min-width: 0;
  box-sizing: border-box;
  border: 0;
  padding: 16px;
  background-color: #EFF3FD;
  width: 100%;
}

.c28 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 16px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c30 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c32 {
  min-width: 0;
  box-sizing: border-box;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 8px;
}

.c44 {
  min-width: 0;
  box-sizing: border-box;
  border: 0;
  padding: 16px;
  background-color: #EFF3FD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c59 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c59:hover {
  opacity: 0.8;
}

.c60 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c60:hover {
  opacity: 0.8;
}

.c34 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px;
  border-radius: 4px;
}

.c34:hover {
  opacity: 0.8;
}

.c29 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  padding-left: 0;
}

.c2 {
  width: 24;
  height: 24;
}

.c35 {
  height: auto;
  opacity: 1 !important;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c37 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c33:hover .c36 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
}

.c31:hover {
  border-bottom: 2px solid #5E26FF;
}

.c1 {
  outline: 0;
  border: 0;
  background: transparent;
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
  cursor: pointer;
  display: inline-block;
  margin-left: auto;
  justify-self: flex-end;
}

.c1:hover {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  margin-left: 24px;
  margin-top: 0;
  margin-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #1AD08F;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #C4C4C4;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  border: 0;
  border-top-right-radius: 8px;
  border-top-left-radius: 8px;
  padding: 16px;
  background-color: #5E26FF;
  color: #ffffff;
  width: 100%;
}

.c21 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c22 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c23 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c25 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c26 {
  min-width: 0;
  box-sizing: border-box;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c40 {
  min-width: 0;
  box-sizing: border-box;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 48px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c42 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c45 {
  min-width: 0;
  box-sizing: border-box;
  background-color: #EFF3FD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c46 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 560px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c47 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c48 {
  min-width: 0;
  box-sizing: border-box;
  padding-left: 8px;
  padding-right: 8px;
  margin-right: 8px;
  display: inline-block;
  min-width: 240px;
  text-align: left;
}

.c50 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-bottom: 1px solid;
  border-top: 1px solid;
  color: #EFF3FD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c53 {
  min-width: 0;
  box-sizing: border-box;
  top: 0px;
  left: 0px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  color: #5E26FF;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 64px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25rem;
}

.c55 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  text-align: left;
}

.c12 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c14 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-right: 8px;
  margin-top: 0;
  margin-bottom: 0;
}

.c18 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: center;
}

.c24 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c56 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  width: 100%;
}

.c41 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c49 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c11 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c43 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #bacbf7;
  padding-left: 16px;
  padding-right: 16px;
  display: inline-block;
  height: 48px;
  width: 100%;
  border-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c43:hover {
  background: #bacbf7;
  cursor: initial;
}

.c43:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c51 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  padding-left: 16px;
  padding-right: 16px;
  display: inline-block;
  height: 48px;
  width: 100%;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c51:hover {
  background: #bacbf7;
  cursor: text;
}

.c51:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c39 {
  display: inline-block;
  width: 100%;
  border-radius: 1px;
}

.c54 {
  text-align: center;
  position: relative;
  background: #d1ddfa;
}

.c52 {
  -moz-appearance: textfield;
}

.c52::-webkit-outer-spin-button,
.c52::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c57 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
}

.c57:hover {
  border-bottom: 2px solid #5E26FF;
}

<div>
  <div
    class="c0"
    display="flex"
    width="100%"
  >
    <button
      class="c1"
      display="inline-block"
      role="button"
      type="button"
    >
      <svg
        class="c2"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M19.7333 4.2669C19.3776 3.91103 18.801 3.91103 18.4453 4.2669L11.9994 10.7166L5.55552 4.26885C5.19986 3.91299 4.62323 3.91299 4.26757 4.26885C3.91191 4.62472 3.91191 5.20169 4.26757 5.55756L10.7115 12.0053L4.27793 18.4426C3.92228 18.7985 3.92228 19.3755 4.27793 19.7313C4.63359 20.0872 5.21022 20.0872 5.56587 19.7313L11.9994 13.294L18.435 19.7333C18.7906 20.0892 19.3672 20.0892 19.7229 19.7333C20.0786 19.3774 20.0786 18.8005 19.7229 18.4446L13.2874 12.0053L19.7333 5.5556C20.0889 5.19974 20.0889 4.62276 19.7333 4.2669Z"
          fill="#5E26FF"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <form
      class="c3"
    >
      <div
        class="c4"
        display="flex"
        width="100%"
      >
        <div
          class="c5"
        >
          
          <div
            class="c6"
            display="flex"
            overflow="hidden"
            width="auto"
          >
            <ul
              class="c7"
              display="flex"
              width="100%"
            >
              <div
                class="c8"
                display="flex"
              >
                <li
                  class="c9"
                  display="flex"
                >
                  <div
                    class="c10"
                    color="#000"
                    display="flex"
                    size="6"
                  >
                    <h3
                      class="c11"
                    >
                      Ch
                    </h3>
                  </div>
                </li>
                <li
                  class=""
                >
                  <h2
                    class="c12"
                    font-family="RT-Alias-Grotesk"
                    font-size="4"
                    font-weight="400"
                  >
                    Change Ownership
                  </h2>
                </li>
              </div>
              <li
                class=""
              >
                <div
                  class="c13"
                  display="flex"
                >
                  <p
                    class="c14"
                    color="core.nearblack"
                    font-family="RT-Alias-Grotesk"
                    font-size="2"
                    font-weight="400"
                  >
                    Step 
                    3
                  </p>
                  <div
                    class="c15"
                    display="flex"
                  >
                    <div
                      class="c16"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                  <div
                    class="c15"
                    display="flex"
                  >
                    <div
                      class="c16"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                  <div
                    class="c15"
                    display="flex"
                  >
                    <div
                      class="c16"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                  <div
                    class="c15"
                    display="flex"
                  >
                    <div
                      class="c17"
                      display="inline-block"
                      height="2"
                      width="2"
                    />
                  </div>
                </div>
              </li>
            </ul>
            <p
              class="c18"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Your Ledger Address pays the transaction fee.
            </p>
            <p
              class="c18"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Please review the transaction fee details. If the fee is too high, please come back and try again later.
            </p>
          </div>
          <div
            class="c19"
          >
            <div
              class="c20"
              color="core.white"
              width="100%"
            >
              <div
                class="c21"
                display="flex"
              >
                <div
                  class="c8"
                  display="flex"
                >
                  <div
                    class="c22"
                    color="white"
                    display="flex"
                    size="6"
                  >
                    <h3
                      class="c11"
                    >
                      Ms
                    </h3>
                  </div>
                  <div
                    class="c23"
                    display="flex"
                  >
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      From
                    </p>
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      f2m4f2 ... sha5za
                    </p>
                  </div>
                </div>
                <div
                  class="c25"
                  display="flex"
                >
                  <div
                    class="c26"
                    display="flex"
                  >
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      Ledger Balance
                    </p>
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      1
                       FIL
                    </p>
                  </div>
                  <div
                    class="c23"
                    display="flex"
                  >
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      Msig Balance
                    </p>
                    <p
                      class="c24"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                    >
                      1
                       FIL
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c27"
              width="100%"
            >
              <div
                class="c28"
                display="flex"
              >
                <h4
                  class="c29"
                  color="core.nearblack"
                  font-family="RT-Alias-Grotesk"
                  font-size="2"
                  font-weight="400"
                >
                  Old signer
                </h4>
                <div
                  class="c30"
                  display="flex"
                >
                  <a
                    class="c31"
                    color="core.primary"
                    font-size="2"
                    href="https://filfox.info/en/address/f1nq5k2mps5umtebdovlyo7y6a3ywc7u4tobtuo3a"
                    target="_blank"
                  >
                    f1nq5k ... btuo3a
                  </a>
                  <div
                    class="c32"
                    color="core.secondary"
                    display="flex"
                  >
                    <button
                      class="c33 c34 c35"
                      display="flex"
                      font-size="3"
                      height="6"
                      role="button"
                      type="button"
                    >
                      <svg
                        class="c2 c36 c37"
                        fill="none"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="#1A0066"
                          height="12"
                          width="12"
                          x="8"
                          y="4"
                        />
                        <rect
                          fill="#E0D7FE"
                          height="12"
                          width="12"
                          x="4"
                          y="8"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="c38"
              >
                <div
                  class="c39"
                >
                  <div
                    class="c15"
                    display="flex"
                  >
                    <div
                      class="c40"
                      display="flex"
                    >
                      <h4
                        class="c41"
                        color="core.nearblack"
                        font-family="RT-Alias-Grotesk"
                        font-size="2"
                        font-weight="400"
                      >
                        New signer
                      </h4>
                    </div>
                    <div
                      class="c42"
                      display="flex"
                    >
                      <input
                        class="c43"
                        disabled=""
                        display="inline-block"
                        height="6"
                        name=""
                        placeholder="f1..."
                        value="t0100"
                        width="100%"
                      />
                      
                    </div>
                  </div>
                </div>
                
              </div>
            </div>
            <div
              class="c44"
              display="flex"
              width="100%"
            >
              <div
                class="c45"
                display="flex"
              >
                <div
                  class="c46"
                  display="flex"
                >
                  <div
                    class="c39"
                    name="tx-fee"
                  >
                    <div
                      class="c47"
                      display="flex"
                    >
                      <div
                        class="c48"
                        display="inline-block"
                      >
                        <h4
                          class="c49"
                          font-family="RT-Alias-Grotesk"
                          font-size="2"
                          font-weight="400"
                        >
                          Transaction fee
                        </h4>
                      </div>
                      <div
                        class="c50"
                        color="background.screen"
                        display="flex"
                        width="100%"
                      >
                        <input
                          class="c51 c52"
                          display="inline-block"
                          height="6"
                          type="number"
                          value="1000000"
                          width="100%"
                        />
                        <div
                          class="c53 c54"
                          color="core.primary"
                          display="flex"
                          font-size="3"
                          height="6"
                        >
                          aFil
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="c55"
                    display="flex"
                    width="100%"
                  >
                    <p
                      class="c56"
                      color="core.darkgray"
                      font-family="RT-Alias-Grotesk"
                      font-size="2"
                      font-weight="400"
                      width="100%"
                    >
                      You will not pay more than 
                      0.000000000001
                       FIL for this transaction.
                       
                      <a
                        class="c57"
                        color="core.primary"
                        font-size="2"
                        href="https://filfox.info/en/stats/gas"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        More information on average gas fee statistics.
                      </a>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c58"
          display="flex"
          width="100%"
        >
          <button
            class="c59"
            font-size="3"
            height="6"
            type="button"
          >
            Back
          </button>
          <button
            class="c60"
            font-size="3"
            height="6"
            type="submit"
          >
            Next
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
